[package]
name = "blink"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.6"
stm32l4xx-hal = { version = "0.7.1", features = ["rt", "stm32l432"] }
rtt-target = { version = "0.3.1",  features = ["cortex-m"]}
panic-rtt-target = "0.1.3"
embedded-alloc = "0.5.1"
